# GOST34112012-Hash

./: .gitignore  .gitmodules  CHANGELOG.md  GOST3411-Hash.cabal  GOST34112012-Hash.cabal  LICENSE
_darcs/: hashed_inventory  index  index.old  patch_description.txt  tentative_pristine
_darcs/inventories/: 0000000212-cebccb5e6ad1ef933c952b9c8c804986b851c046103be682b1d24dad042341a0  0000000421-1b4f5e98c6ab6630e7f7531dce6c6a9bcbff63e3ea459627c026e51dfc36393a  0000000636-4b30b2f3f4c572e02096ee7493a9c92eafe8d096fd185eabcad714a72b397fb0  0000000852-477c0d64905fe37bb3a2b867f471175001edf340bc0c9012e032e7cc313d08d8  0000001066-a26973a40f65c0b8a09470ffbf1fb317b15d360df43e775b1104d1000a9a0459
_darcs/patches/: 0000000641-9d9fdc90bdc59f56727306fe09b2a7f8e89b574bb3da35ecec5e986afc928fec  0000003652-3c1ac8a77f650f232a6119e6b0bc6d8dc8b64727ab7936c9d177300ec868aab5  0000004379-17219f1f9285a08235f4de295e5f5b23a5cd17db764a5101b987d22dbb834c27  0000008181-49d4025899a1c95fad42e0eb152a22655b65876cd392a7fb3e7296960e88b8a5  0000009706-3d0fb8bffc940a4f5e1f791f19b90916f97bf3163b12d2ba770f45f860a8a57f  0000012457-aad84dfa680f917f3b7e1e7793663e199e88d8cbffc0f874dd3c5c50b56c835c  0000027586-cd799da9d00fe1539d0c849752a7f77d5e7de499d3a5e8408786ab8d084b70f8  0000081031-aeb8d8e49dfd812edaaaa699c544e339b29fb4e4282ddb5943717be1e8a638fd  0000205747-bf8e78bffc17e9943db310b069020f2c27214c5a60a56283848d544d28727ff3  0000503427-5e318a01f3c981373d1c6c189d64bbfe699c475a419e38dc3b96d92f7227263d  0000584723-2b145ee12b5f1dea95f0e882cfa9ed77ecef66690f5af361c1694e5a939765d0
_darcs/prefs/: boring  repos
c_src/: GOST3411.c  gost3411-2012-config.h  streebog.c
c_src/streebog/: .gitignore  git_log
src/Crypto/Hash/: GOST34112012.hsc
src/Data/Digest/: GOST3411.hsc
src/Data/Digest/GOST34112012/: Hash.hsc
test/: Main.hs
test/etalon/: H5.256  H5.512  H6.256  H6.512  H7.256  H7.512  H8.256  H8.512  make4Gb.sh
